RESOLVED FIXED152605
The web process hangs when computing elements-based snap points for a container with large max scroll offset
https://bugs.webkit.org/show_bug.cgi?id=152605
Summary The web process hangs when computing elements-based snap points for a contain...
Simon Fraser (smfr)
Reported 2015-12-30 21:37:14 PST
Created attachment 268025 [details] Opening this will cause a hang Opening the attached test case will hang the web process.
Attachments
Opening this will cause a hang (1.67 KB, text/html)
2015-12-30 21:37 PST, Simon Fraser (smfr)
no flags
So will this (RTL) (1.79 KB, text/html)
2015-12-30 21:47 PST, Simon Fraser (smfr)
no flags
Patch (6.72 KB, patch)
2016-07-24 21:10 PDT, Wenson Hsieh
simon.fraser: review+
Simon Fraser (smfr)
Comment 1 2015-12-30 21:38:28 PST
Hangs in updateFromStyle().
Simon Fraser (smfr)
Comment 2 2015-12-30 21:42:28 PST
Super easy to hit this; just make the .colorBox 200px wide. No need for the RTL.
Simon Fraser (smfr)
Comment 3 2015-12-30 21:47:27 PST
Created attachment 268027 [details] So will this (RTL)
Radar WebKit Bug Importer
Comment 4 2016-03-24 21:15:31 PDT
Wenson Hsieh
Comment 5 2016-07-24 21:10:21 PDT
Wenson Hsieh
Comment 6 2016-07-25 08:47:21 PDT
Comment on attachment 284461 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=284461&action=review > Source/WebCore/ChangeLog:3 > + The web process when computing elements-based snap points for a container with large max scroll offset what I meant to write was "The web process hangs when computing..."
Wenson Hsieh
Comment 7 2016-07-25 09:04:36 PDT
Note You need to log in before you can comment on or make changes to this bug.